side nav in progress

--- a/home.html
+++ b/home.html
@@ -34,12 +34,22 @@
     </div>
     <!-- end Preloader -->
 
-    <div off-canvas="slidebar-1 left reveal">
-      <ul>
-        <li><a href="#">work</a></li>
-        <li><a href="#">about me</a></li>
-        <li><a href="mailto:philipskenan@gmail.com">email me!</a></li>
-      </ul>
+    <div off-canvas="slidebar-1 left reveal" class="side-nav">
+      <div class="side-nav-wrapper">
+        <ul class="side-nav-links">
+          <li><a href="#"><img class="side-logo" src="images/logo-turquoise.svg"></a></li>
+          <li><a href="#">work</a></li>
+          <li><a href="#">about me</a></li>
+          <li><a href="mailto:philipskenan@gmail.com">email me!</a></li>
+        </ul>
+
+        <ul class="social-media">
+          <a href="http://twitter.com/keyphlip"><li><i class="ion-social-twitter"></i></li></a>
+          <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
+          <a href="http://dribbble.com/keyphlip"><li><i class="ion-social-dribbble"></i></li></a>
+          <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
+        </ul>
+      </div>
     </div>
 
     <div class="body-wrapper" canvas>
@@ -61,7 +71,7 @@
                 </ul>
       				</div>
 
-      				<a href="http://kenanphilips.com"><img id="logo" src="images/logo-black.svg" alt="Kenan Philips"></a>
+      				<a href="http://kenanphilips.com"><div id="logo"></div></a>
       			</div>
       		</div>
       	</div>
