side nav progress

--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
 
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                <li><a class="links" href="http://kenanphilips.com/">work</a></li>
+                <li><a class="links" href="/">work</a></li>
                 <li><a class="navbar-brand cd-top logo-nav" href="#"></a><li>
-                <li><a class="links" href="http://kenanphilips.com/about">about</a></li>
+                <li><a class="links" href="/about">about</a></li>
                 <!-- <li><a class="links" href="#contact">Let's Talk</a></li> -->
                 </li>
               </ul>
