--- a/home.html
+++ b/home.html
@@ -36,10 +36,12 @@
 
     <div off-canvas="slidebar-1 left reveal" class="side-nav">
       <div class="side-nav-wrapper">
+
+        <a href="/"><img class="side-logo" src="images/logo-black.svg"></a>
+
         <ul class="side-nav-links">
-          <li><a href="#"><img class="side-logo" src="images/logo-turquoise.svg"></a></li>
-          <li><a href="#">work</a></li>
-          <li><a href="#">about me</a></li>
+          <li><a href="/">work</a></li>
+          <li><a href="/about">about me</a></li>
           <li><a href="mailto:philipskenan@gmail.com">email me!</a></li>
         </ul>
 
@@ -58,6 +60,7 @@
       	<div class="container">
       		<div class="row">
       			<div class="col xs-100">
+
       				<div class="float-left">
       					<span class="button js-toggle-left-slidebar"><i class="ion-navicon-round"></i> <span class="text">Menu</span></span>
       				</div>
@@ -71,7 +74,6 @@
                 </ul>
       				</div>
 
-      				<a href="http://kenanphilips.com"><div id="logo"></div></a>
       			</div>
       		</div>
       	</div>
