--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Uh Oh - Kenan Philips</title>
+    <title>Under Construction - Kenan Philips</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
     <div class="bg-404">
       <div class="table-cell">
         <div class="container">
-          <h1>uh oh!</h1>
+          <h1>oops!</h1>
           <h2>this site is under construction</h2>
           <a class="email" href="mailto:philipskenan@gmail.com">philipskenan@gmail.com</a>
           <ul class="social-media">
