--- a/home.html
+++ b/home.html
@@ -46,9 +46,9 @@
         </ul>
 
         <ul class="social-media">
-          <a href="http://twitter.com/keyphlip"><li><i class="ion-social-twitter"></i></li></a>
+          <a href="http://twitter.com/kenanphilips"><li><i class="ion-social-twitter"></i></li></a>
           <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
-          <a href="http://dribbble.com/keyphlip"><li><i class="ion-social-dribbble"></i></li></a>
+          <a href="http://dribbble.com/kenanphilips"><li><i class="ion-social-dribbble"></i></li></a>
           <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
         </ul>
       </div>
@@ -67,9 +67,9 @@
 
       				<div class="float-right">
                 <ul class="social-media">
-                  <a href="http://twitter.com/keyphlip"><li><i class="ion-social-twitter"></i></li></a>
+                  <a href="http://twitter.com/kenanphilips"><li><i class="ion-social-twitter"></i></li></a>
                   <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
-                  <a href="http://dribbble.com/keyphlip"><li><i class="ion-social-dribbble"></i></li></a>
+                  <a href="http://dribbble.com/kenanphilips"><li><i class="ion-social-dribbble"></i></li></a>
                   <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
                 </ul>
       				</div>
@@ -118,9 +118,9 @@
       <section class="footer">
         <a class="email" href="mailto:philipskenan@gmail.com">philipskenan@gmail.com</a>
         <ul class="social-media">
-          <a href="http://twitter.com/keyphlip"><li><i class="ion-social-twitter"></i></li></a>
+          <a href="http://twitter.com/kenanphilips"><li><i class="ion-social-twitter"></i></li></a>
           <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
-          <a href="http://dribbble.com/keyphlip"><li><i class="ion-social-dribbble"></i></li></a>
+          <a href="http://dribbble.com/kenanphilips"><li><i class="ion-social-dribbble"></i></li></a>
           <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
         </ul>
       </section>
