--- a/about.html
+++ b/about.html
@@ -34,83 +34,104 @@
     </div>
     <!-- end Preloader -->
 
-    <section class="about-page">
+    <div off-canvas="slidebar-1 left reveal" class="side-nav">
+      <div class="side-nav-wrapper">
+
+        <a href="/"><img class="side-logo" src="images/logo-black.svg"></a>
+
+        <ul class="side-nav-links">
+          <li><a href="/">work</a></li>
+          <li><a href="/about">about me</a></li>
+          <li><a href="mailto:philipskenan@gmail.com">email me!</a></li>
+        </ul>
+
+        <ul class="social-media">
+          <a href="http://twitter.com/kenanphilips"><li><i class="ion-social-twitter"></i></li></a>
+          <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
+          <a href="http://dribbble.com/kenanphilips"><li><i class="ion-social-dribbble"></i></li></a>
+          <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
+        </ul>
+      </div>
+    </div>
+
+    <div class="body-wrapper" canvas>
+
+      <nav>
+        <div class="container">
+          <div class="row">
+            <div class="col xs-100">
+
+              <div class="float-left">
+                <span class="button js-toggle-left-slidebar"><i class="ion-navicon-round"></i> <span class="text">Menu</span></span>
+              </div>
+
+              <div class="float-right">
+                <ul class="social-media">
+                  <a href="http://twitter.com/kenanphilips"><li><i class="ion-social-twitter"></i></li></a>
+                  <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
+                  <a href="http://dribbble.com/kenanphilips"><li><i class="ion-social-dribbble"></i></li></a>
+                  <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
+                </ul>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </nav>
 
       <div class="container">
 
-        <!-- nav -->
-        <nav class="navbar navbar-default" id="navbar">
-          <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span><i class="ion-navicon"></i></span>
-              </button>
-              <a class="cd-top logo-collapsed" href="#"><img src="images/logo-black.svg"></a>
-            </div>
-
-            <div class="collapse navbar-collapse">
-              <ul class="nav navbar-nav">
-                <li><a class="links" href="/">work</a></li>
-                <li><a class="navbar-brand cd-top logo-nav" href="#"></a><li>
-                <li><a class="links" href="/about">about</a></li>
-                <!-- <li><a class="links" href="#contact">Let's Talk</a></li> -->
-                </li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
-        </nav>
-        <!-- end nav -->
-
         <!-- services -->
         <section class="services" id="services">
-          <div class="services-title">
-            <h1>What I bring to the table.</h1>
-            <!-- <hr /> -->
-          </div>
-          <div class="col-md-4">
-            <span>A</span>
-            <h2>ui / ux</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <div class="col-md-4">
-            <i class="ion-paintbrush"></i>
-            <h2>design</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <div class="col-md-4">
-            <i class="ion-laptop"></i>
-            <h2>development</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="table-cell">
+            <div class="services-title">
+              <h1>What I can do for you.</h1>
+              <!-- <hr /> -->
+            </div>
+            <div class="col-md-4">
+              <span>A</span>
+              <h2>ui / ux</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="col-md-4">
+              <i class="ion-paintbrush"></i>
+              <h2>design</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="col-md-4">
+              <i class="ion-laptop"></i>
+              <h2>development</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
           </div>
         </section>
         <!-- end sevices -->
 
         <!-- about -->
         <section class="about" id="about">
-          <div class="about-title col-md-6">
-            <h1>A little<br>about<br>myself.</h1><br>
-            <img class="img-circle kenan" src="images/kenan.jpg">
-            <!-- <hr /> -->
-          </div>
-          <div class="col-md-6">
-            <div class="row">
-              <div class="about-text">
-                <h2>who i am</h2>
-                <p>I'm a web & graphic designer with a background in web development, residing in the artsy community of Port Moody, BC.</p>
-              </div>
+          <div class="table-cell">
+            <div class="about-title col-md-6">
+              <h1>A little<br>about<br>myself.</h1><br>
+              <!-- <hr /> -->
             </div>
-            <div class="row">
-              <div class="about-text">
-                <h2>what i do</h2>
-                <p>I create eye-pleasing, responsive websites as well as design clean, modernized branding and web-friendly content.</p>
+            <div class="col-md-6">
+              <div class="row">
+                <div class="about-text">
+                  <h2>who i am</h2>
+                  <p>I'm a web & graphic designer with a background in web development, residing in the artsy community of Port Moody, BC.</p>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="about-text">
-                <h2>how i do it</h2>
-                <p>With precise awareness to detail, I'm passionate about taking ideas and creating them from the ground up.</p>
+              <div class="row">
+                <div class="about-text">
+                  <h2>what i do</h2>
+                  <p>I create eye-pleasing, responsive websites as well as design clean, modernized branding and web-friendly content.</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="about-text">
+                  <h2>how i do it</h2>
+                  <p>With precise awareness to detail, I'm passionate about taking ideas and creating them from the ground up.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -119,9 +140,9 @@
 
         <!-- contact -->
         <section class="contact" id="contact">
-            <h4>contact</h4>
+          <div class="table-cell">
             <h1 class="contact-title">Let's connect.</h1>
-            <form name="sentMessage" id="contactForm" method="POST">
+            <form name="sentMessage" id="contactForm" method="POST" action="https://formspree.io/philipskenan@gmail.com">
                 <div class="left_input">
                   <div class="form-group">
                     <input name="name" placeholder="Name" class="form-control" type="text" id="name" required>
@@ -145,28 +166,29 @@
                 <input type="submit" value="Submit" class="btn btn-xl" id="contact-button">
               </div>
             </form>
-            <script type="text/javascript">
+            <!-- <script type="text/javascript">
               var contactform =  document.getElementById('contactForm');
               contactform.setAttribute('action', '//formspree.io/' + 'philipskenan' + '@' + 'gmail' + '.' + 'com');
-            </script>
+            </script> -->
+          </div>
         </section>
         <!-- end contact -->
 
       </div>
 
-    </section>
+      <!-- footer -->
+      <section class="footer">
+        <a class="email" href="mailto:philipskenan@gmail.com">philipskenan@gmail.com</a>
+        <ul class="social-media">
+          <a href="http://twitter.com/kenanphilips"><li><i class="ion-social-twitter"></i></li></a>
+          <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
+          <a href="http://dribbble.com/kenanphilips"><li><i class="ion-social-dribbble"></i></li></a>
+          <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
+        </ul>
+      </section>
+      <!-- end footer -->
 
-    <!-- footer -->
-    <section class="footer">
-      <a class="email" href="mailto:philipskenan@gmail.com">philipskenan@gmail.com</a>
-      <ul class="social-media">
-        <a href="http://twitter.com/keyphlip"><li><i class="ion-social-twitter"></i></li></a>
-        <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
-        <a href="http://dribbble.com/keyphlip"><li><i class="ion-social-dribbble"></i></li></a>
-        <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
-      </ul>
-    </section>
-    <!-- end footer -->
+    </div>
 
     <!-- jQuery -->
     <script src="js/jquery-2.1.1.js"></script>
@@ -175,6 +197,8 @@
     <script src="js/menu.js"></script>
     <script src="js/typed.min.js"></script>
     <script src="js/isotope.pkgd.min.js"></script>
+    <script src="js/slidebars.js"></script>
+    <script src="js/scripts.js"></script>
 
     <!-- custom script -->
     <script src="js/main.js"></script>
