--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <div off-canvas="slidebar-1 left reveal" class="side-nav">
       <div class="side-nav-wrapper">
 
-        <a href="/"><img class="side-logo" src="images/logo-black.svg"></a>
+        <a href="/"><div class="side-logo"></div></a>
 
         <ul class="side-nav-links">
           <li><a href="/">work</a></li>
@@ -158,7 +158,7 @@
                 </div>
                 <input type="text" name="_gotcha" style="display:none">
                 <input type="hidden" name="_subject" value="New Contact Message!">
-                <input type="hidden" name="_next" value="#">
+                <input type="hidden" name="_next" value="http://kenanphilips.com/thank-you">
             <!-- Button -->
               <div class="clearfix"></div>
               <div class="text-center">
@@ -168,7 +168,7 @@
             </form>
             <!-- <script type="text/javascript">
               var contactform =  document.getElementById('contactForm');
-              contactform.setAttribute('action', '//formspree.io/' + 'philipskenan' + '@' + 'gmail' + '.' + 'com');
+              contactform.setAttribute('action', 'https:' + '//formspree.io/' + 'philipskenan' + '@' + 'gmail' + '.' + 'com');
             </script> -->
           </div>
         </section>
