--- a/home.html
+++ b/home.html
@@ -37,8 +37,9 @@
     <div off-canvas="slidebar-1 left reveal" class="side-nav">
       <div class="side-nav-wrapper">
 
-        <a href="/"><img class="side-logo" src="images/logo-black.svg"></a>
+        <a href="/"><div class="side-logo"></div></a>
 
+        
         <ul class="side-nav-links">
           <li><a href="/">work</a></li>
           <li><a href="/about">about me</a></li>
