--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kenan Philips</title>
+    <title>Home - Kenan Philips</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
@@ -39,7 +39,7 @@
 
         <a href="/"><div class="side-logo"></div></a>
 
-        
+
         <ul class="side-nav-links">
           <li><a href="/">work</a></li>
           <li><a href="/about">about me</a></li>
@@ -90,24 +90,30 @@
 
         <div class="projects container-fluid">
           <div class="row">
-            <a href="#" class="project col-xs-12 col-sm-6" style="background-image: url(images/oddjobs-background.jpg);">
+            <a href="/oddjobs" class="project col-xs-12 col-sm-6" style="background-image: url(images/oddjobs-background.jpg);">
               <div class="overlay">
                 <img src="images/oddjobs.svg">
               </div>
             </a>
-            <a href="#" class="project col-xs-12 col-sm-6" style="background-image: url(images/uppercase-background.jpg);">
+            <a href="/uppercase" class="project col-xs-12 col-sm-6" style="background-image: url(images/uppercase-background.jpg);">
               <div class="overlay">
                 <img src="images/uppercase.svg">
               </div>
             </a>
-            <a href="#" class="project col-xs-12 col-sm-6" style="background-image: url(images/ppac-background.jpg);">
+            <a href="/ppac-young-adults" class="project col-xs-12 col-sm-6" style="background-image: url(images/ppac-background.jpg);">
               <div class="overlay">
                 <img src="images/ppacyoungadults.svg">
               </div>
             </a>
-            <a href="#" class="project col-xs-12 col-sm-6" style="background-image: url(images/blog-background.jpg);">
+            <a href="/blog" class="project col-xs-12 col-sm-6" style="background-image: url(images/blog-background.jpg);">
               <div class="overlay">
                 <img src="images/blog.svg">
+              </div>
+            </a>
+            <a class="project col-xs-12 col-sm-6" style="background-image: url(images/stratapro-background.jpg);">
+              <div class="overlay">
+                <img src="images/strata-pro.svg">
+                <p>coming soon</p>
               </div>
             </a>
           </div>
