--- a/thank-you.html
+++ b/thank-you.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Under Construction - Kenan Philips</title>
+    <title>Thank You! - Kenan Philips</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -84,9 +84,7 @@
     <script src="js/jquery-2.1.1.js"></script>
     <!--  plugins -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/menu.js"></script>
     <script src="js/typed.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
     <script src="js/slidebars.js"></script>
     <script src="js/scripts.js"></script>
 
