--- a/about.html
+++ b/about.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kenan Philips</title>
+    <title>About - Kenan Philips</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css.map" rel="stylesheet">
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
 
     <!-- main css -->
@@ -78,6 +79,12 @@
           </div>
         </div>
       </nav>
+
+      <div class="about-intro">
+        <div class="about-intro-text table-cell">
+          <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+        </div>
+      </div>
 
       <div class="container">
 
@@ -194,9 +201,7 @@
     <script src="js/jquery-2.1.1.js"></script>
     <!--  plugins -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/menu.js"></script>
     <script src="js/typed.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
     <script src="js/slidebars.js"></script>
     <script src="js/scripts.js"></script>
 
