--- a/ppac-young-adults.html
+++ b/ppac-young-adults.html
@@ -83,42 +83,33 @@
       <section class="home-page">
         <div class="container">
           <div class="hero">
-            <h1>oddjobs</h1>
+            <h1>peace portal young adults</h1>
           </div>
 
           <div class="col-md-4 project-desc">
-            <h3>oddjobs</h3>
+            <img class="project-logo" src="images/ppacyoungadults-colour.svg">
+            <h3>peace portal young adults branding</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <hr>
             <ul class="tools-used">
               <h4>tools used</h4>
-              <div class="col-sm-6">
-                <li><i class="ion-record"></i> Ruby on Rails</li>
-                <li><i class="ion-record"></i> Sass</li>
-                <li><i class="ion-record"></i> Bootstrap 3</li>
-                <li><i class="ion-record"></i> Git</li>
-              </div>
-              <div class="col-sm-6">
-                <li><i class="ion-record"></i> HTML 5</li>
-                <li><i class="ion-record"></i> jQuery</li>
-                <li><i class="ion-record"></i> PostgreSQL</li>
-              </div>
+              <li><i class="ion-record"></i> Adobe Illustrator CC</li>
             </ul>
           </div>
 
           <div class="col-md-8">
             <div class="mockup-responsive">
               <img class="desktop-background" src="images/oddjobs-desktop.png">
-              <img class="screenshot screenshot-one" src="images/oddjobs-home.png">
-              <img class="screenshot screenshot-two" src="images/oddjobs-index.png">
-              <img class="screenshot screenshot-three" src="images/oddjobs-show.png">
-              <img class="screenshot screenshot-four" src="images/oddjobs-profile.png">
+              <img class="screenshot screenshot-one" src="images/ppac-one.png">
+              <img class="screenshot screenshot-two" src="images/ppac-two.png">
+              <img class="screenshot screenshot-three" src="images/ppac-three.png">
+              <img class="screenshot screenshot-four" src="images/ppac-four.png">
             </div>
           </div>
 
         </div>
 
-      </section>
+      </section><br><br>
 
       <!-- footer -->
       <section class="footer">
