--- a/about.html
+++ b/about.html
@@ -80,12 +80,6 @@
         </div>
       </nav>
 
-      <div class="about-intro">
-        <div class="about-intro-text table-cell">
-          <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-        </div>
-      </div>
-
       <div class="container">
 
         <!-- services -->
@@ -95,20 +89,20 @@
               <h1>What I can do for you.</h1>
               <!-- <hr /> -->
             </div>
-            <div class="col-md-4">
-              <span>A</span>
-              <h2>ui / ux</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
               <i class="ion-paintbrush"></i>
-              <h2>design</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h2>graphic design</h2>
+              <p>Being fluent in both Adobe Photoshop CC and Adobe Illustrator CC, I have had experience working with logo &amp; branding creation, social &amp; promotional material design, advertisements, as well as other marketing material design.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
               <i class="ion-laptop"></i>
               <h2>development</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>As a web development graduate from <a href="https://codecore.ca" target="_blank">CodeCore Bootcamp</a>, I am able to work closely with both back-end and front-end developers to get the best outcome of a project. Some of my skills include HTML5, CSS3, Javacsript, jQuery, Ruby on Rails, Git, and PostgreSQL.</p>
+            </div>
+            <div class="col-md-4 col-sm-12">
+              <span>A</span>
+              <h2>ui / ux design</h2>
+              <p>Using my knowledge of web development, I am able to create the best way for the user to view and interact with a website using clean, modern, and consistant design.</p>
             </div>
           </div>
         </section>
@@ -117,11 +111,12 @@
         <!-- about -->
         <section class="about" id="about">
           <div class="table-cell">
-            <div class="about-title col-md-6">
-              <h1>A little<br>about<br>myself.</h1><br>
+            <div class="about-title col-md-6 col-sm-12">
+              <h1 class="desktop">A little<br>about<br>myself.</h1><br>
+              <h1 class="mobile">A little about myself.</h1>
               <!-- <hr /> -->
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-12">
               <div class="row">
                 <div class="about-text">
                   <h2>who i am</h2>
