--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
         <ul class="side-nav-links">
           <li><a href="/">work</a></li>
           <li><a href="/about">about me</a></li>
-          <li><a href="mailto:philipskenan@gmail.com">email me!</a></li>
+          <li><a href="mailto:philipskenan@gmail.com">email me</a></li>
         </ul>
 
         <ul class="social-media">
@@ -95,7 +95,7 @@
                 <img src="images/oddjobs.svg">
               </div>
             </a>
-            <a href="/uppercase" class="project col-xs-12 col-sm-6" style="background-image: url(images/uppercase-background.jpg);">
+            <a href="/uppercase.html" class="project col-xs-12 col-sm-6" style="background-image: url(images/uppercase-background.jpg);">
               <div class="overlay">
                 <img src="images/uppercase.svg">
               </div>
@@ -108,12 +108,6 @@
             <a href="/blog" class="project col-xs-12 col-sm-6" style="background-image: url(images/blog-background.jpg);">
               <div class="overlay">
                 <img src="images/blog.svg">
-              </div>
-            </a>
-            <a class="project col-xs-12 col-sm-6" style="background-image: url(images/stratapro-background.jpg);">
-              <div class="overlay">
-                <img src="images/strata-pro.svg">
-                <p>coming soon</p>
               </div>
             </a>
           </div>
