--- a/blog.html
+++ b/blog.html
@@ -83,22 +83,23 @@
       <section class="home-page">
         <div class="container">
           <div class="hero">
-            <img src="images/"
+            <h1 class="blog-title">blog</h1>
           </div>
 
-          <div class="col-md-4 project-desc">
+          <div class="col-md-4 col-sm-12 project-desc">
             <h3>Blog</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Along with Oddjobs, this was a project that I did while in school. We built it step by step, adding features every time. It is built complately with Ruby on Rails. I decided to update the design closer to the end of the course, but unfortunately didn't get a change to finish completely. But although this site isn't finished, the desktop version is viewable and functional! Some features include, creating an account, creating, removing and editing posts, and commenting on posts.</p>
+            <a class="site-link" href="http://kenanphilips-blog.herokuapp.com" target="_blank">Check it out here</a>
             <hr>
             <ul class="tools-used">
               <h4>tools used</h4>
-              <div class="col-sm-6">
+              <div class="col-sm-6 col-xs-6">
                 <li><i class="ion-record"></i> Ruby on Rails</li>
                 <li><i class="ion-record"></i> Sass</li>
                 <li><i class="ion-record"></i> Bootstrap 3</li>
                 <li><i class="ion-record"></i> Git</li>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-6 col-xs-6">
                 <li><i class="ion-record"></i> HTML 5</li>
                 <li><i class="ion-record"></i> jQuery</li>
                 <li><i class="ion-record"></i> PostgreSQL</li>
@@ -107,13 +108,13 @@
             </ul>
           </div>
 
-          <div class="col-md-8">
+          <div class="col-md-8 col-sm-12">
             <div class="mockup-responsive">
               <img class="desktop-background" src="images/oddjobs-desktop.png">
-              <img class="screenshot screenshot-one" src="images/blog-1.png">
-              <img class="screenshot screenshot-two" src="images/blog-2.png">
-              <img class="screenshot screenshot-three" src="images/blog-3.png">
-              <img class="screenshot screenshot-four" src="images/blog-4.png">
+              <img class="screenshot blog-screenshot screenshot-one" src="images/blog-1.png">
+              <img class="screenshot blog-screenshot screenshot-two" src="images/blog-2.png">
+              <img class="screenshot blog-screenshot screenshot-three" src="images/blog-3.png">
+              <img class="screenshot blog-screenshot screenshot-four" src="images/blog-4.png">
             </div>
           </div>
 
