--- a/oddjobs.html
+++ b/oddjobs.html
@@ -83,22 +83,22 @@
       <section class="home-page">
         <div class="container">
           <div class="hero">
-            <h1>oddjobs</h1>
+            <h1 class="oddjobs-title">oddjobs</h1>
           </div>
 
-          <div class="col-md-4 project-desc">
+          <div class="col-md-4 col-sm-12 project-desc">
             <h3>oddjobs</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>This was my first site built myself using Ruby on Rails. It was a project for our school's Demo Day (a day where students showcase their newfound skills to the tech community). Unfortunately the site is not currently live, but it's a project that I would love to revamp and update in the future! Some features include creating a student / employer account, applying to postings if you're a student, creating and removing postings if you're an employer, and, using Google Maps, being able to see the job location and find directions from where you are located.</p>
             <hr>
             <ul class="tools-used">
               <h4>tools used</h4>
-              <div class="col-sm-6">
+              <div class="col-sm-6 col-xs-6">
                 <li><i class="ion-record"></i> Ruby on Rails</li>
                 <li><i class="ion-record"></i> Sass</li>
                 <li><i class="ion-record"></i> Bootstrap 3</li>
                 <li><i class="ion-record"></i> Git</li>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-6 col-xs-6">
                 <li><i class="ion-record"></i> HTML 5</li>
                 <li><i class="ion-record"></i> jQuery</li>
                 <li><i class="ion-record"></i> PostgreSQL</li>
@@ -106,7 +106,7 @@
             </ul>
           </div>
 
-          <div class="col-md-8">
+          <div class="col-md-8 col-sm-12">
             <div class="mockup-responsive">
               <img class="desktop-background" src="images/oddjobs-desktop.png">
               <img class="screenshot screenshot-one" src="images/oddjobs-home.png">
