--- a/ppac-young-adults.html
+++ b/ppac-young-adults.html
@@ -83,13 +83,13 @@
       <section class="home-page">
         <div class="container">
           <div class="hero">
-            <h1>peace portal young adults</h1>
+            <h1 class="ppac-title" >peace portal young adults</h1>
           </div>
 
           <div class="col-md-4 project-desc">
-            <img class="project-logo" src="images/ppacyoungadults-colour.svg">
+            <!-- <img class="project-logo" src="images/ppacyoungadults-colour.svg"> -->
             <h3>peace portal young adults branding</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>This was my first branding project for my church's young adults department. I worked directly with the department leader to come up with something simple, clean, and modern as they were updating their creatives. </p>
             <hr>
             <ul class="tools-used">
               <h4>tools used</h4>
@@ -98,12 +98,12 @@
           </div>
 
           <div class="col-md-8">
-            <div class="mockup-responsive">
+            <div class="mockup-responsive ppac-mockup">
               <img class="desktop-background" src="images/oddjobs-desktop.png">
-              <img class="screenshot screenshot-one" src="images/ppac-one.png">
-              <img class="screenshot screenshot-two" src="images/ppac-two.png">
-              <img class="screenshot screenshot-three" src="images/ppac-three.png">
-              <img class="screenshot screenshot-four" src="images/ppac-four.png">
+              <img class="screenshot ppac-screenshot screenshot-one" src="images/ppac-one.png">
+              <img class="screenshot ppac-screenshot screenshot-two" src="images/ppac-two.png">
+              <img class="screenshot ppac-screenshot screenshot-three" src="images/ppac-three.png">
+              <img class="screenshot ppac-screenshot screenshot-four" src="images/ppac-four.png">
             </div>
           </div>
 
