--- a/uppercase.html
+++ b/uppercase.html
@@ -83,29 +83,29 @@
       <section class="home-page">
         <div class="container">
           <div class="hero">
-            <h1>uppercase</h1>
+            <h1 class="uppercase-title">uppercase</h1>
           </div>
 
-          <div class="col-md-4 project-desc">
+          <div class="col-md-4 col-sm-12 project-desc">
             <h3>uppercase</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>This site was started as a freelance group I was a part of. The site is a simple static one page site that showcases our abilities and projects as a group. It is built using HTML5, CSS3, Boostrap, and jQuery. As for the branding, I got the chance to create the logo and overall design of the brand. I wanted to go with something that looked fun, clean, and modern.</p>
             <a class="site-link" href="http://uppercaseyvr.com" target="_blank">Check it out here</a>
             <hr>
             <ul class="tools-used">
               <h4>tools used</h4>
-              <div class="col-sm-6">
+              <div class="col-sm-6 col-xs-6">
                 <li><i class="ion-record"></i> HTML 5</li>
                 <li><i class="ion-record"></i> Bootstrap 3</li>
                 <li><i class="ion-record"></i> Git</li>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-6 col-xs-6">
                 <li><i class="ion-record"></i> CSS 3</li>
                 <li><i class="ion-record"></i> jQuery</li>
               </div>
             </ul>
           </div>
 
-          <div class="col-md-8">
+          <div class="col-md-8 col-sm-12">
             <div class="mockup-responsive">
               <img src="images/uppercase-responsive.png">
             </div>
