--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
       <div class="table-cell">
         <div class="container">
           <h1>oops!</h1>
-          <h2>this site is under construction</h2>
+          <h2>there's nothing here :(</h2>
           <a class="email" href="mailto:philipskenan@gmail.com">philipskenan@gmail.com</a>
           <ul class="social-media">
             <a href="http://twitter.com/kenanphilips"><li><i class="ion-social-twitter"></i></li></a>
